--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "start_heroku": "heroku local:start",
     "super": "supervisor ./bin/www",
     "start_old": "node ./bin/www"
   },
