--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
-    "express": "~4.15.5",
+    "express": "^4.16.3",
     "express-flash": "0.0.2",
     "express-partials": "^0.3.0",
     "express-session": "^1.15.6",
@@ -38,6 +38,6 @@
     "supervisor": "^0.12.0"
   },
   "devDependencies": {
-    "sqlite3": "^3.1.13"
+    "sqlite3": "^4.0.0"
   }
 }
